--- a/style.css
+++ b/style.css
@@ -176,6 +176,12 @@ body {
   background-color: #f5f5f5;
   border-radius: 20px;
   border: none;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.product-img:hover {
+  transform: scale(1.1);
 }
 .product-img img {
   height: 200px;
@@ -207,6 +213,7 @@ body {
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
 }
+
 .img1 {
   grid-area: img1;
 }
@@ -227,6 +234,13 @@ body {
 }
 img {
   width: 100%;
+}
+.item {
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+.item:hover {
+  transform: scale(1.1);
 }
 
 /* ... */
